--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "commitlint": "commitlint --from d4e7f7e",
     "test": "check-node-version --npm 6.14.12 && nyc mocha -- -R spec 'tests/**/*.test.js'",
     "prepublish": "grunt build"
+    "prepare": "grunt build"
   },
   "author": "Jeremy Thomerson",
   "license": "MIT",
